--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,19 @@
 [workspace]
 members = ["crates/*"]
-resolver = "2"
-default-members = ["crates/spider"]
+resolver = "3"
 
 [workspace.package]
 version = "0.0.0"
-edition = "2021"
+edition = "2024"
+rust-version = "1.85.0"
 authors = ["joshradin <jradin16@gmail.com>"]
 description = "Spider build system"
 categories = []
+
+[workspace.dependencies]
+futures = "0.3.31"
+pin-project = "1.1.10"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+
+tokio = { version = "1.43.0" }
