--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 
 tokio = { version = "1.43.0" }
+parking_lot = "0.12.3"
+snafu = "0.8.5"
+spider-core = { version = "0.0.0", path = "crates/spider-core" }
