--- a/crates/spider-api/Cargo.toml
+++ b/crates/spider-api/Cargo.toml
@@ -7,4 +7,12 @@ authors.workspace = true
 description.workspace = true
 categories.workspace = true
 
+[features]
+default = ["fs"]
+fs = ["dep:spider-fs"]
+
 [dependencies]
+spider-core.workspace = true
+spider-fs = { version = "0.0.0", path = "../spider-fs", optional = true }
+
+
