--- a/crates/spider-core/Cargo.toml
+++ b/crates/spider-core/Cargo.toml
@@ -9,8 +9,8 @@ categories.workspace = true
 
 [dependencies]
 parking_lot = { workspace = true }
-snafu = { workspace = true }
 static_assertions = "1.1.0"
 spider-proc_macros = { version = "0.0.0", path = "../spider-proc_macros"}
 thiserror = "2.0.12"
-
+bitfield = "0.19.0"
+tracing.workspace = true
